layers - Embedding added

--- a/common/layers.ipynb
+++ b/common/layers.ipynb
@@ -275,7 +275,7 @@
     "**成员变量**\n",
     "\n",
     "- 参数 - 没有需要学习的参数，故 `params`是空列表\n",
-    "- 中间变量 - `out` 前向计算的输出 out\n",
+    "- 中间结果 - `out` 前向计算的输出 out\n",
     "- 梯度 -  `grads` 为空列表\n",
     "\n",
     "**成员函数**\n",
@@ -309,6 +309,66 @@
     "        \n",
     "        return dx"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 6 Embedding Layer\n",
+    "\n",
+    "设计 Embedding 层主要是为了简化从大型词向量矩阵中抽取某个单词对应的词向量的过程，把一个 one-hot 向量与大型矩阵的乘积转换为按照单词 ID 直接在矩阵中进行索引\n",
+    "\n",
+    "实现如下：\n",
+    "\n",
+    "**成员变量**\n",
+    "\n",
+    "- 参数 - `W` 词向量矩阵\n",
+    "- 中间结果 - `idx` 单词索引\n",
+    "- 梯度 - `dW` 更新词向量矩阵所需的梯度\n",
+    "\n",
+    "**成员函数**\n",
+    "\n",
+    "- `__init__(self, W)`\n",
+    "- `forward(self, idx)`\n",
+    "- `backward(self, dout)`\n",
+    "\n",
+    "代码如下："
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class Embedding:\n",
+    "    def __init__(self, W):\n",
+    "        self.params = [W]\n",
+    "        self.grads = [np.zeros_like(W)]\n",
+    "        self.idx = None  ## 指示被选中单词的 ID\n",
+    "        \n",
+    "    def forward(self, idx):\n",
+    "        W, = self.params\n",
+    "        self.idx = idx\n",
+    "        out = W[idx]\n",
+    "        \n",
+    "        return out\n",
+    "    \n",
+    "    def backward(self, dout):\n",
+    "        ## 因为前向计算时，W 中只有一行数据参与了运算，所以在后向计算时只有这一行数据才有梯度\n",
+    "        dW, = self.grads\n",
+    "        dW[...] = 0  # 全部置零\n",
+    "        np.add.at(dW, self.idx, dout)  # 将 dout 加到参与了运算的那一行的梯度上去\n",
+    "        \n",
+    "        return None  # 不需要返回"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
