layers - Dropout added

--- a/common/layers.ipynb
+++ b/common/layers.ipynb
@@ -364,11 +364,67 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 7 Dropout Layer\n",
+    "\n",
+    "Dropout 可以看做是网络正则化的一种手段，每次训练通过随机关闭一些神经元，避免网络对某些神经元的过度依赖导致的过拟合\n",
+    "\n",
+    "另外，Dropout 也可看做是多个神经网络的加权平均，从集成学习的角度对其性能提升加以解释\n",
+    "\n",
+    "实现要点：\n",
+    "\n",
+    "**成员变量**\n",
+    "\n",
+    "- 参数 - 没有需要学习的参数 `params` 为空列表\n",
+    "- 中间结果 - `mask` 关闭神经元的掩码；`dropout_ratio` 关闭多少神经元 \n",
+    "- 梯度 - `grads` 同样为空\n",
+    "\n",
+    "**成员函数**\n",
+    "\n",
+    "- `__init__(self, dropout_ratio=0.5)`\n",
+    "- `forward(self, x, train_flag=True)`\n",
+    "- `backward(self, dout)`\n",
+    "\n",
+    "代码如下："
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "class dropout\n",
+    "    '''\n",
+    "    http://arxiv.org/abs/1207.058\n",
+    "    '''\n",
+    "    def __init__(self, dropout_ratio=0.5):\n",
+    "        '''\n",
+    "        :params dropout_ratio: 是阈值而不是比率，大于阈值的的神经元才不会关闭\n",
+    "        '''\n",
+    "        self.params, self.grads = [], []\n",
+    "        self.dropout_ratio = dropout_ratio # 用于前向和后向计算\n",
+    "        self.mask = None\n",
+    "        \n",
+    "    def forward(self, x, train_flag=True):\n",
+    "        if train_flag:\n",
+    "            self.mask = np.random.randn((*x.shape)) > self.dropout_ratio\n",
+    "            out = x * self.mask\n",
+    "        else:\n",
+    "            ## 推理时，直接等比例缩小输出值\n",
+    "            out = x * (1 - self.dropout_ratio)  # dropout_ratio 是阈值，所以做减法\n",
+    "            \n",
+    "        return out\n",
+    "    \n",
+    "    def backward(self, dout):\n",
+    "        '''后向计算直接安装 ReLU 的做法进行\n",
+    "        '''\n",
+    "        dx = dout * self.mask\n",
+    "        \n",
+    "        return dx"
+   ]
   }
  ],
  "metadata": {
