time_layers - TimeRNN modified

--- a/common/layers.ipynb
+++ b/common/layers.ipynb
@@ -257,7 +257,7 @@
     "        dx = self.y.copy()  # 深拷贝一份 y\n",
     "        dx[np.arange(batch_size), self.t] -= 1  # 计算 y-t 的技巧\n",
     "        dx = dx * dout\n",
-    "        dx = dx / batch_size  # 共 batch-size 个数据参与计算交叉熵，每条数据贡献需要除以数据量\n",
+    "        dx = dx / batch_size  # 共 batch-size 个数据参与计算交叉熵，交叉熵是均值，所以每条数据需要除以数据量\n",
     "        \n",
     "        return dx"
    ]
